Added --enable-preview flag to spring boot maven plugin