@@ -124,6 +124,10 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <arguments>--enable-preview</arguments>
+                    <jvmArguments>--enable-preview</jvmArguments>
+                </configuration>
             </plugin>
         </plugins>
     </build>
